fixed stretching of card placeholders on mobile devices

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -45,11 +45,12 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: start;
     padding: 1em 0;
 }
 
 .card-slot {
-    width: 5rem;
+    min-width: 5rem;
     height: 7rem;
     border: 1px solid whitesmoke;
     border-radius: 5px;
